Fix dns_config module, udpate integration tests for dns_config module, add unit tests for dns_config module_utils

--- a/tests/integration/targets/dns_config/tasks/main.yml
+++ b/tests/integration/targets/dns_config/tasks/main.yml
@@ -40,13 +40,35 @@
           - 5.6.7.8
         state: set
       register: result
+    - scale_computing.hypercore.dns_config_info:
+      register: info
     - ansible.builtin.assert:
         that:
-          - result.changed
+          - result.changed == True
           - result.diff.before != result.diff.after
-          - result.new_state.search_domains == ["example.domain1.com", "example.domain2.com"]
-          - result.new_state.server_ips == ["1.2.3.4", "5.6.7.8"]
-          - result.new_state.uuid == actual_uuid
+          - info.records.search_domains == ["example.domain1.com", "example.domain2.com"]
+          - info.records.server_ips == ["1.2.3.4", "5.6.7.8"]
+          - info.records.uuid == actual_uuid
+
+    - name: Do the previous task again - Overwrite all entries (search_domains, dns_servers)
+      scale_computing.hypercore.dns_config:
+        search_domains:
+          - example.domain1.com
+          - example.domain2.com
+        dns_servers:
+          - 1.2.3.4
+          - 5.6.7.8
+        state: set
+      register: result
+    - scale_computing.hypercore.dns_config_info:
+      register: info
+    - ansible.builtin.assert:
+        that:
+          - result.changed == False
+          - result.diff.before == result.diff.after
+          - info.records.search_domains == ["example.domain1.com", "example.domain2.com"]
+          - info.records.server_ips == ["1.2.3.4", "5.6.7.8"]
+          - info.records.uuid == actual_uuid
 
     - name: PREPEND new 'dns_servers' to existing DNS config
       scale_computing.hypercore.dns_config:
@@ -55,13 +77,32 @@
           - 0.1.1.1
         state: before
       register: result
+    - scale_computing.hypercore.dns_config_info:
+      register: info
     - ansible.builtin.assert:
         that:
-          - result.changed
+          - result.changed == True
           - result.diff.before != result.diff.after
-          - result.new_state.search_domains == ["example.domain1.com", "example.domain2.com"]
-          - result.new_state.server_ips == ["0.0.0.0", "0.1.1.1", "1.2.3.4", "5.6.7.8"]
-          - result.new_state.uuid == actual_uuid
+          - info.records.search_domains == ["example.domain1.com", "example.domain2.com"]
+          - info.records.server_ips == ["0.0.0.0", "0.1.1.1", "1.2.3.4", "5.6.7.8"]
+          - info.records.uuid == actual_uuid
+
+    - name: Do the previous task again - PREPEND new 'dns_servers' to existing DNS config
+      scale_computing.hypercore.dns_config:
+        dns_servers:
+          - 0.0.0.0
+          - 0.1.1.1
+        state: before
+      register: result
+    - scale_computing.hypercore.dns_config_info:
+      register: info
+    - ansible.builtin.assert:
+        that:
+          - result.changed == False
+          - result.diff.before == result.diff.after
+          - info.records.search_domains == ["example.domain1.com", "example.domain2.com"]
+          - info.records.server_ips == ["0.0.0.0", "0.1.1.1", "1.2.3.4", "5.6.7.8"]
+          - info.records.uuid == actual_uuid
 
     - name: PREPEND new 'search_domains' to existing DNS config
       scale_computing.hypercore.dns_config:
@@ -69,13 +110,15 @@
           - example.domain0.com
         state: before
       register: result
+    - scale_computing.hypercore.dns_config_info:
+      register: info
     - ansible.builtin.assert:
         that:
-          - result.changed
+          - result.changed == True
           - result.diff.before != result.diff.after
-          - result.new_state.search_domains == ["example.domain0.com", "example.domain1.com", "example.domain2.com"]
-          - result.new_state.server_ips == ["0.0.0.0", "0.1.1.1", "1.2.3.4", "5.6.7.8"]
-          - result.new_state.uuid == actual_uuid
+          - info.records.search_domains == ["example.domain0.com", "example.domain1.com", "example.domain2.com"]
+          - info.records.server_ips == ["0.0.0.0", "0.1.1.1", "1.2.3.4", "5.6.7.8"]
+          - info.records.uuid == actual_uuid
 
     - name: APPEND new 'dns_servers' to existing DNS config
       scale_computing.hypercore.dns_config:
@@ -84,13 +127,15 @@
           - 0.9.9.9
         state: after
       register: result
+    - scale_computing.hypercore.dns_config_info:
+      register: info
     - ansible.builtin.assert:
         that:
-          - result.changed
+          - result.changed == True
           - result.diff.before != result.diff.after
-          - result.new_state.search_domains == ["example.domain0.com", "example.domain1.com", "example.domain2.com"]
-          - result.new_state.server_ips == ["0.0.0.0", "0.1.1.1", "1.2.3.4", "5.6.7.8", "9.9.9.9", "0.9.9.9"]
-          - result.new_state.uuid == actual_uuid
+          - info.records.search_domains == ["example.domain0.com", "example.domain1.com", "example.domain2.com"]
+          - info.records.server_ips == ["0.0.0.0", "0.1.1.1", "1.2.3.4", "5.6.7.8", "9.9.9.9", "0.9.9.9"]
+          - info.records.uuid == actual_uuid
 
     - name: APPEND new 'search_domains' to existing DNS config
       scale_computing.hypercore.dns_config:
@@ -98,27 +143,47 @@
           - example.domain3.com
         state: after
       register: result
+    - scale_computing.hypercore.dns_config_info:
+      register: info
     - ansible.builtin.assert:
         that:
-          - result.changed
+          - result.changed == True
           - result.diff.before != result.diff.after
-          - result.new_state.search_domains == ["example.domain0.com", "example.domain1.com", "example.domain2.com", "example.domain3.com"]
-          - result.new_state.server_ips == ["0.0.0.0", "0.1.1.1", "1.2.3.4", "5.6.7.8", "9.9.9.9", "0.9.9.9"]
-          - result.new_state.uuid == actual_uuid
+          - info.records.search_domains == ["example.domain0.com", "example.domain1.com", "example.domain2.com", "example.domain3.com"]
+          - info.records.server_ips == ["0.0.0.0", "0.1.1.1", "1.2.3.4", "5.6.7.8", "9.9.9.9", "0.9.9.9"]
+          - info.records.uuid == actual_uuid
 
-    - name: Clear all entries by using 'overwrite'
+    - name: Clear all entries by using 'state=set'
       scale_computing.hypercore.dns_config:
         search_domains: []
         dns_servers: []
         state: set
       register: result
+    - scale_computing.hypercore.dns_config_info:
+      register: info
     - ansible.builtin.assert:
         that:
-          - result.changed
+          - result.changed == True
           - result.diff.before != result.diff.after
-          - result.new_state.search_domains == []
-          - result.new_state.server_ips == []
-          - result.new_state.uuid == actual_uuid
+          - info.records.search_domains == []
+          - info.records.server_ips == []
+          - info.records.uuid == actual_uuid
+
+    - name: Do the previous taks again - Clear all entries by using 'state=set'
+      scale_computing.hypercore.dns_config:
+        search_domains: []
+        dns_servers: []
+        state: set
+      register: result
+    - scale_computing.hypercore.dns_config_info:
+      register: info
+    - ansible.builtin.assert:
+        that:
+          - result.changed == False
+          - result.diff.before == result.diff.after
+          - info.records.search_domains == []
+          - info.records.server_ips == []
+          - info.records.uuid == actual_uuid
 
 # -----------------------------------------------------------
 
