--- a/tests/integration/targets/vm_disk/tasks/main.yml
+++ b/tests/integration/targets/vm_disk/tasks/main.yml
@@ -147,7 +147,7 @@
 
     - name: Upload ISO image integration-test.iso to HyperCore API
       scale_computing.hypercore.iso:
-        name: "integration-test.iso"
+        name: "integration-test-disk.iso"
         source: "integration.iso"
         state: present
       when: uploaded_iso_info.records | length == 0
@@ -159,7 +159,7 @@
         items:
           - disk_slot: 0
             type: ide_cdrom
-            iso_name: "integration-test.iso"
+            iso_name: "integration-test-disk.iso"
         state: present
       register: result
     - ansible.builtin.assert:
@@ -168,11 +168,11 @@
           - result is changed
           - result.record.0.type == "ide_cdrom"
           - result.record.0.disk_slot == 0
-          - result.record.0.iso_name == "integration-test.iso"
+          - result.record.0.iso_name == "integration-test-disk.iso"
 
     - name: Assert that ISO image is mounted on vm-integration-test-disks
       scale_computing.hypercore.iso_info:
-        name: integration-test.iso
+        name: integration-test-disk.iso
       register: result
     - ansible.builtin.assert:
         that:
@@ -196,7 +196,7 @@
 
     - name: Assert that ISO image isn't mounted on vm-integration-test-disks anymore
       scale_computing.hypercore.iso_info:
-        name: integration-test.iso
+        name: integration-test-disk.iso
       register: result
     - ansible.builtin.assert:
         that:
