--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -92,6 +92,8 @@ jobs:
       - run: echo $TARGET_LIST
       - run: $TARGET_LIST=$(ls /work-dir/ansible_collections/scale_computing/hypercore/tests/integration/targets)
       - run: echo $TARGET_LIST
+
+  integration-test:
     needs:
       - integration-prepare-env
     runs-on: [self-hosted]
