integration test speed

--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -90,7 +90,8 @@ jobs:
       - run: cd $WORKDIR && ansible-playbook tests/integration/prepare/prepare_vm.yml
       - run: cd $WORKDIR && ansible-playbook tests/integration/prepare/prepare_iso.yml
       - run: echo $TARGET_LIST
-      - run: $TARGET_LIST=$(ls /work-dir/ansible_collections/scale_computing/hypercore/tests/integration/targets)
+      - run: ls $WORKDIR
+      - run: ls $WORKDIR/tests/integration/targets
       - run: echo $TARGET_LIST
 
   integration-test:
