integration speed test

--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -109,7 +109,7 @@ jobs:
       SMB_PASSWORD: ${{ secrets.SMB_PASSWORD }}
     strategy:
       matrix:
-        test_name: ['api', 'inventory', 'iso', 'node_info', 'remote_cluster_info', 'snapshot_schedule', 'vm', 'vm_boot_devices', 'vm_clone', 'vm_disk', 'vm_export', 'vm_git_issues', 'vm_import', 'vm_nic', 'vm_nic_info', 'vm_node_affinity', 'vm_params', 'vm_replication', 'vm_replication_info']
+        test_name: ['api', 'inventory', 'iso', 'node_info', 'remote_cluster_info', 'snapshot_schedule', 'vm_main', 'vm_boot_devices', 'vm_clone', 'vm_shutdown','vm_disk', 'vm_export', 'vm_git_issues', 'vm_import', 'vm_nic', 'vm_nic_info', 'vm_node_affinity', 'vm_params', 'vm_replication', 'vm_replication_info']
     steps:
       - name: Checkout
         uses: actions/checkout@v3
