--- a/tests/integration/targets/snapshot_schedule/tasks/main.yml
+++ b/tests/integration/targets/snapshot_schedule/tasks/main.yml
@@ -3,6 +3,7 @@
     SC_HOST: "{{ sc_host }}"
     SC_USERNAME: "{{ sc_username }}"
     SC_PASSWORD: "{{ sc_password }}"
+    SC_TIMEOUT: "{{ sc_timeout }}"
 
   block:
     - name: Delete snapshot schedule, if it maybe already exists from before
