--- a/tests/integration/targets/vm_params/tasks/check_mode.yml
+++ b/tests/integration/targets/vm_params/tasks/check_mode.yml
@@ -3,6 +3,7 @@
     SC_HOST: "{{ sc_host }}"
     SC_USERNAME: "{{ sc_username }}"
     SC_PASSWORD: "{{ sc_password }}"
+    SC_TIMEOUT: "{{ sc_timeout }}"
 
   block:
   - name: Delete XLAB-vm_params_CI_test (if it exists from before)
