--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -77,6 +77,7 @@ jobs:
       - run: apt install -y git make
       - run: pip install ansible-core==2.13.1
       - run: apt install -y genisoimage
+      - run: apt install -y jq
       - run: mkdir -p $WORKDIR
       - run: cp -a ./  $WORKDIR
       - run: ansible-galaxy collection install community.general
