--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -93,6 +93,7 @@ jobs:
       - run: cd $WORKDIR && ansible-playbook tests/integration/prepare/prepare_iso.yml
       - id: set-matrix
         run: echo "::set-output name=matrix::$(ls $WORKDIR/tests/integration/targets | jq -R -s -c 'split("\n")[:-1]')"
+      - run: echo "{matrix2}={$(ls $WORKDIR/tests/integration/targets | jq -R -s -c 'split("\n")[:-1]')}" >> $TARGET_NAME
 
   integration-test:
     needs:
@@ -131,6 +132,7 @@ jobs:
           smb_username: ${SMB_USERNAME}
           smb_password: ${SMB_PASSWORD}
           EOF
+      - run: echo "${{ env.TARGET_NAME }}"
       - run: cd $WORKDIR && ls -al tests/integration/integration_config.yml
       - run: cd $WORKDIR && ansible-test integration ${{ matrix.test_name }}
 
