--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -68,8 +68,7 @@ jobs:
       SC_PASSWORD: ${{ secrets.SC_PASSWORD }}
       ANSIBLE_COLLECTIONS_PATH: /work-dir
     outputs:
-      matrix: ${{ steps.set-matrix.outputs.matrix }}
-      matrix2: ${{ steps.set-matrix2.outputs.matrix2 }}
+      matrix: ${{ steps.set-matrix2.outputs.matrix }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -93,9 +92,7 @@ jobs:
       - run: cd $WORKDIR && ansible-playbook tests/integration/prepare/prepare_vm.yml
       - run: cd $WORKDIR && ansible-playbook tests/integration/prepare/prepare_iso.yml
       - id: set-matrix
-        run: echo "::set-output name=matrix::$(ls $WORKDIR/tests/integration/targets | jq -R -s -c 'split("\n")[:-1]')"
-      - id: set-matrix2
-        run: echo "matrix2=$(ls $WORKDIR/tests/integration/targets | jq -R -s -c 'split("\n")[:-1]')" >> $GITHUB_OUTPUT
+        run: echo "matrix=$(ls $WORKDIR/tests/integration/targets | jq -R -s -c 'split("\n")[:-1]')" >> $GITHUB_OUTPUT
 
   integration-test:
     needs:
@@ -113,7 +110,6 @@ jobs:
     strategy:
       matrix:
         test_name: ${{ fromJson(needs.integration-prepare-env.outputs.matrix) }}
-        test_name2: ${{ fromJson(needs.integration-prepare-env.outputs.matrix2) }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -135,7 +131,7 @@ jobs:
           smb_username: ${SMB_USERNAME}
           smb_password: ${SMB_PASSWORD}
           EOF
-      - run: echo "${{ matrix.test_name2 }}"
+      - run: echo "${{ matrix.test_name }}"
       - run: cd $WORKDIR && ls -al tests/integration/integration_config.yml
       - run: cd $WORKDIR && ansible-test integration ${{ matrix.test_name }}
 
