--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -128,7 +128,7 @@ jobs:
           smb_username: ${SMB_USERNAME}
           smb_password: ${SMB_PASSWORD}
           EOF
-      - run: echo "${{ needs.integration-prepare-env.outputs.matrix }}"
+      - run: echo ${{ needs.integration-prepare-env.outputs.matrix }}
       - run: cd $WORKDIR && ls -al tests/integration/integration_config.yml
       - run: cd $WORKDIR && ansible-test integration ${{ matrix.test_name }}
 
