--- a/tests/integration/targets/vm_replication/tasks/main.yml
+++ b/tests/integration/targets/vm_replication/tasks/main.yml
@@ -18,11 +18,6 @@
         vm_name: vm-integration-test-source-vm
       register: vm_source_info
 
-    - name: Get clone VM info
-      scale_computing.hypercore.vm_info:
-        vm_name: XLAB-vm_replication_CI_test
-      register: vm_clone_info
-
   # Create if source VM does not exist; Used when single test run
     - name: Create a VM
       scale_computing.hypercore.api:
@@ -52,16 +47,11 @@
 
   # Clone when source VM exists; Used when running github integration testing
     - name: Clone the source VM
-      scale_computing.hypercore.api:
-        action: post
-        endpoint: /rest/v1/VirDomain/"{{ vm_source_info.records.0.uuid }}"/clone
-        data:
-          template:
-            name: XLAB-vm_replication_CI_test
-            tags: vm_replication  
+      scale_computing.hypercore.vm_clone:
+        vm_name: XLAB-vm_replication_CI_test
+        source_vm_name: vm-integration-test-source-vm
       when:
         - vm_source_info.records | length > 0
-        - vm_clone_info.records | length == 0
       register: vm_cloned
     - ansible.builtin.assert:
         that:
@@ -71,13 +61,6 @@
       scale_computing.hypercore.task_wait:
         task_tag: "{{ vm_created.record }}"
       when: vm_source_info.records | length == 0
-
-    - name: Wait for the VM to be cloned
-      scale_computing.hypercore.task_wait:
-        task_tag: "{{ vm_created.record }}"
-      when:
-        - vm_source_info.records | length > 0
-        - vm_close_info.records | length == 0
   
     - name: Get available cluster connection
       scale_computing.hypercore.api:
