--- a/tests/integration/targets/i_vm_params/tasks/main.yml
+++ b/tests/integration/targets/i_vm_params/tasks/main.yml
@@ -36,12 +36,12 @@
 
   - name: Delete snapshot schedule (if it exists from before)
     scale_computing.hypercore.snapshot_schedule: &delete-snapshot-schedule
-      name: demo-snap-schedule
+      name: demo-snap-schedule-params
       state: absent
 
   - name: Setup snapshot schedule
     scale_computing.hypercore.snapshot_schedule:
-      name: demo-snap-schedule
+      name: demo-snap-schedule-params
       state: present
       recurrences:
         - name: weekly-tuesday
