--- a/examples/dns_config.yml
+++ b/examples/dns_config.yml
@@ -8,7 +8,6 @@
     # ------------------------------------------------------
     - name: Setup DNS configuration by overwriting existing entries
       scale_computing.hypercore.dns_config:
-        overwrite: all
         search_domains:
           - example.domain1.com
           - example.domain2.com
@@ -16,6 +15,7 @@
         dns_servers:
           - 1.2.3.4
           - 5.6.7.8
+        state: set
     # ------------------------------------------------------
     - name: Modify existing DNS config configurations
       scale_computing.hypercore.dns_config:
@@ -24,3 +24,4 @@
         dns_servers:
           - 1.2.3.4
           - 5.6.7.8
+        state: before # or after
