--- a/tests/integration/targets/vm_boot_devices/tasks/main.yml
+++ b/tests/integration/targets/vm_boot_devices/tasks/main.yml
@@ -28,23 +28,25 @@
         machine_type: BIOS
       register: result
 
-    - name: Create project directory /tmp (if it doesn't exist already)
-      file: state=directory path=/tmp
+    - name: Get integration-test.iso info
+      scale_computing.hypercore.iso_info:
+        name: "integration-test.iso"
+      register: uploaded_iso_info
 
-    - name: Download ISO image from http://tinycorelinux.net/13.x/x86/release/TinyCore-current.iso and save it into /tmp/TinyCore-vm-boot-devices-integration.iso
-      get_url: url=http://tinycorelinux.net/13.x/x86/release/TinyCore-current.iso dest=/tmp/TinyCore-vm-boot-devices-integration.iso
+    - name: Create a text file
+      command: touch integration.txt
+      when: uploaded_iso_info.records | length == 0
 
-    - name: Delete the ISO image (if it may exist from before)
+    - name: Create an ISO file
+      command: genisoimage -output integration.iso integration.txt
+      when: uploaded_iso_info.records | length == 0
+
+    - name: Upload ISO image integration-test.iso to HyperCore API
       scale_computing.hypercore.iso:
-        name: "TinyCore-vm-boot-devices-integration.iso"
-        state: absent
-      register: result
-
-    - name: Upload ISO image TinyCore-vm-boot-devices-integration.iso to HyperCore API
-      scale_computing.hypercore.iso:
-        name: "TinyCore-vm-boot-devices-integration.iso"
-        source: "/tmp/TinyCore-vm-boot-devices-integration.iso"
+        name: "integration-test.iso"
+        source: "integration.iso"
         state: present
+      when: uploaded_iso_info.records | length == 0
       register: result
 
     - name: Set a couple of disks
@@ -60,7 +62,7 @@
           - disk_slot: 2
             type: ide_cdrom
             size: "{{ '5 GB' | human_to_bytes }}"
-            iso_name: "TinyCore-vm-boot-devices-integration.iso"
+            iso_name: "integration-test.iso"
         state: set
       register: created_disks
 
@@ -157,7 +159,7 @@
         vm_name: vm-integration-test-boot_devices
         items:
           - type: ide_cdrom
-            iso_name: TinyCore-vm-boot-devices-integration.iso
+            iso_name: integration-test.iso
         state: present
         first: true
       register: result
@@ -179,20 +181,11 @@
         that:
           - result.record == []
 
-    - name: Delete the ISO image from the API
-      scale_computing.hypercore.iso:
-        name: "TinyCore-vm-boot-devices-integration.iso"
-        state: absent
-      register: result
-
-    - name: Delete locally installed ISO image from /tmp/TinyCore-vm-boot-devices-integration.iso
+    - name: Delete locally installed ISO image from current dir
       ansible.builtin.file:
-        path: /tmp/TinyCore-vm-boot-devices-integration.iso
+        path: integration.iso
         state: absent
       register: file_deleted
-    - ansible.builtin.assert:
-        that:
-          file_deleted is changed
 
     - name: Delete the VM on which the tests were performed
       scale_computing.hypercore.vm: *vm-delete
