--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -3,6 +3,10 @@ on:
   - push
 env:
   WORKDIR: /work-dir/ansible_collections/scale_computing/hypercore
+# Run only one workflow for specific branch.
+concurrency:
+  group: ${{ github.ref_name }}
+  cancel-in-progress: true
 jobs:
   docs:
     runs-on: [self-hosted]
@@ -19,6 +23,7 @@ jobs:
         #
       - run: cd $WORKDIR && make docs
       - run: cd $WORKDIR && ls -al docs/build/html
+      - run: echo ${{ github.ref_name }}
 
   sanity-test:
     runs-on: [self-hosted]
