--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -19,6 +19,7 @@ jobs:
         #
       - run: cd $WORKDIR && make docs
       - run: cd $WORKDIR && ls -al docs/build/html
+      - run: echo ${{ github.ref_name }}
 
   sanity-test:
     runs-on: [self-hosted]
