--- a/changelogs/fragments/73_dns_config_modules.yml
+++ b/changelogs/fragments/73_dns_config_modules.yml
@@ -1,3 +1,4 @@
 ---
 major_changes:
-  - Added dns_config and dns_config_info modules. (https://github.com/ScaleComputing/HyperCoreAnsibleCollection/pull/73)
+  - Added dns_config and dns_config_info modules.
+    (https://github.com/ScaleComputing/HyperCoreAnsibleCollection/pull/73)
